LibraryManagemant/src/objects/Book__c.object
<CustomObject>
    <fields>
        <fullName>Author__c</fullName>
        <label>Author</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Books__c</fullName>
        <formula>NumberOfBooks__c -  Borrowed_Books__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Books</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Borrowed_Books__c</fullName>
        <label>Borrowed Books</label>
        <summaryFilterItems>
            <field>Borrow__c.Borrowed_Books__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Borrow__c.Book_Id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfBooks__c</fullName>
        <label>NumberOfBooks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <label>Publisher</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Book</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B-{000}</displayFormat>
        <label>Book ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>